Switch around cl_autoswitch_cts option numbers
Previously 0 fallback 1 always 2 never, now -1 fallback 0 never 1 always.
Also slightly optimized the checks for if forced switching/non-switching should be done.
Added registercvar call in CSQC_Init, since the default is now non-zero.

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -719,7 +719,7 @@ seta cl_race_cptimes_namesize 10 "maximum length of player names in race checkpo
 seta cl_race_checkpoint_splits_console 1 "print race checkpoint splits to console"
 seta cl_race_checkpoint_splits_hud 1 "show race checkpoint splits on HUD in infomessages"
 
-seta cl_autoswitch_cts 0 "\"0\" = fallback to the behavior of cl_autoswitch, \"1\" = always autoswitch in CTS, \"2\" = never autoswitch in CTS"
+seta cl_autoswitch_cts -1 "\"-1\" = fallback to the behavior of cl_autoswitch, \"0\" = never autoswitch in CTS, \"1\" = always autoswitch in CTS"
 
 set cl_stripcolorcodes 0	"experimental feature (NOTE: strips ALL color codes from messages!)"
 
