Improve autoswitching options in CTS

--- a/commands.cfg
+++ b/commands.cfg
@@ -178,7 +178,7 @@ alias menu_showteamselect team_selection_show
 set sv_clientcommand_antispam_time 1 "amount of seconds after a command before another command can be called again without being considered spam; \"-1\" = no limit"
 set sv_clientcommand_antispam_count 8 "amount of commands considered spam before commands are rejected"
 seta sv_status_privacy 1 "hide IP addresses from \"status\" and \"who\" replies shown to clients"
-seta cl_autoswitch 1 "automatically switch to newly picked up weapons if they are better than what you are carrying"
+seta cl_autoswitch 1 "automatically switch to newly picked up weapons if they are better than what you are carrying (NOTE: see also cl_autoswitch_cts)"
 
 // commented out commands are really only intended for internal use, or already have declaration in the engine
 alias autoswitch           "qc_cmd_cmd    autoswitch           ${* ?}" // Whether or not to switch automatically when getting a better weapon
