--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -61,6 +61,9 @@ seta cl_spawnzoom_factor 2 "factor of zoom while spawning"
 seta cl_zoomfactor 5	"how much +zoom will zoom (1-30)"
 seta cl_zoomspeed 8	"how fast +zoom will zoom (0.5-16), negative values mean instant zoom"
 seta cl_zoomsensitivity 0	"how zoom changes sensitivity; \"0\" = weakest, \"1\" = strongest"
+seta cl_zoomscroll 1 "allow scrolling to zoom in or out further while holding +zoom"
+seta cl_zoomscroll_scale 0.2 "percentage of zoom change on scroll (maximum 1, negative values change the scroll direction)"
+seta cl_zoomscroll_speed 16 "zoom scroll speed, negative values mean instant change when scrolling"
 
 seta cl_unpress_zoom_on_spawn 1 "automatically unpress zoom when you spawn"
 seta cl_unpress_zoom_on_death 1 "automatically unpress zoom when you die (and don't allow zoom again while dead)"
