--- a/_hud_common.cfg
+++ b/_hud_common.cfg
@@ -166,11 +166,10 @@ seta hud_panel_scoreboard_itemstats_showdelay_minpos 0.75 "delay displaying the 
 
 seta _hud_panel_strafehud_demo "0" "StrafeHUD changes angle during configure"
 seta hud_panel_strafehud_mode "0" "StrafeHUD mode which controls whether the StrafeHUD is centered at \"0\" = view angle, \"1\" = velocity angle"
-seta hud_panel_strafehud_range "90" "the angle range up to 360 degrees displayed on the StrafeHUD, \"0\" = dynamic (chooses the minimum range required to still see the whole area needed for accelerating)"
-seta hud_panel_strafehud_range_sidestrafe "-1" "the angle range up to 360 degrees displayed on the StrafeHUD when side strafing, \"0\" = dynamic (chooses the minimum range required to still see the whole area needed for accelerating), \"-1\" = same as the normal range"
-seta hud_panel_strafehud_style "2" "\"0\" = no styling, \"1\" = progress bar style for the strafe bar, \"2\" = gradient for the strafe bar"
+seta hud_panel_strafehud_range "90" "the angle range up to 360 degrees displayed on the StrafeHUD; \"-1\" = current fov, \"0\" = dynamic (chooses the minimum range required to still see the whole area needed for accelerating)"
+seta hud_panel_strafehud_range_sidestrafe "-2" "the angle range up to 360 degrees displayed on the StrafeHUD when side strafing, \"0\" = dynamic (chooses the minimum range required to still see the whole area needed for accelerating), \"-1\" = current fov, \"-2\" = same as the normal range"
+seta hud_panel_strafehud_style "2" "\"0\" = no styling, \"1\" = progress bar style for the strafe bar, \"2\" = accelerated gradient for the strafe bar (no nonlinear projection for gradient color/opacity), \"3\" = software gradient for the strafe bar (slow)"
 seta hud_panel_strafehud_unit_show "1" "show units"
-seta hud_panel_strafehud_uncapped "0" "remove some safety restrictions, useful to set thinner indicator lines down to 1px or for trying out higher values for some performance degrading operations (WARNING: elements may turn invisible if too thin, other configurations may crash your game or look horribly ugly)"
 seta hud_panel_strafehud_onground_mode "2" "handling of landing at speeds where friction is higher than optimal acceleration; \"0\" = fill the whole HUD with overturn, \"1\" = show zones regardless, \"2\" = show the zones as if airborne (useful for quake2 and quake3 physics)"
 seta hud_panel_strafehud_onground_friction "1" "account for friction in calculations"
 seta hud_panel_strafehud_bar_preaccel "1" "extend the acceleration zone by the strafe meter zone before full acceleration can be achieved"
@@ -182,31 +181,43 @@ seta hud_panel_strafehud_bar_accel_color "0 1 0" "color of the strafe meter acce
 seta hud_panel_strafehud_bar_accel_alpha "0.5" "opacity of the strafe meter acceleration zone"
 seta hud_panel_strafehud_bar_overturn_color "1 0 1" "color of the strafe meter overturn zone"
 seta hud_panel_strafehud_bar_overturn_alpha "0.5" "opacity of the strafe meter overturn zone"
-seta hud_panel_strafehud_angle_style "0" "set the angle indicator style; \"0\" = none, \"1\" = solid line, \"2\" = dashed line"
-seta hud_panel_strafehud_angle_dashes "4" "determines the amount of dashes if the angle indicator uses a dashed line"
 seta hud_panel_strafehud_angle_alpha "0.8" "opacity of the indicator showing the player's current angle"
-seta hud_panel_strafehud_angle_height "1" "height of the indicator showing the player's current angle (relative to the panel height)"
-seta hud_panel_strafehud_angle_width "0.001" "width of the indicator showing the player's current angle (relative to the panel width)"
 seta hud_panel_strafehud_angle_preaccel_color "0 1 1" "color of the indicator showing the player's current angle if it is within the pre-acceleration zone"
 seta hud_panel_strafehud_angle_neutral_color "1 1 0" "color of the indicator showing the player's current angle if it is within the neutral zone"
 seta hud_panel_strafehud_angle_accel_color "0 1 1" "color of the indicator showing the player's current angle if it is within the acceleration zone"
 seta hud_panel_strafehud_angle_overturn_color "1 0 1" "color of the indicator showing the player's current angle if it is within the overturn zone"
-seta hud_panel_strafehud_angle_arrow "1" "set the angle indicator's arrow style; \"0\" = none, \"1\" = top, \"2\" = bottom, \"3\" = both"
-seta hud_panel_strafehud_angle_arrow_size "0.5" "size of the arrow (relative to the panel height)"
+seta hud_panel_strafehud_angle_line "0" "defines the number of dashes of the indicator line showing the player's current angle; \"0\" = no line, \"1\" = solid line"
+seta hud_panel_strafehud_angle_line_width "0.001" "width of the indicator line showing the player's current angle (relative to the panel width)"
+seta hud_panel_strafehud_angle_line_height "1" "height of the indicator line showing the player's current angle (relative to the panel height)"
+seta hud_panel_strafehud_angle_arrow "1" "arrow style of the angle indicator showing the player's current angle; \"0\" = none, \"1\" = top, \"2\" = bottom, \"3\" = both"
+seta hud_panel_strafehud_angle_arrow_size "0.5" "arrow size of the indicator showing the player's current angle (relative to the panel height)"
 seta hud_panel_strafehud_bestangle "1" "\"1\" = enable a ghost angle indicator showing the best angle to gain maximum acceleration, \"2\" = only when side strafing"
 seta hud_panel_strafehud_bestangle_color "1 1 1" "color of the indicator showing the best angle to gain maximum acceleration"
 seta hud_panel_strafehud_bestangle_alpha "0.5" "opacity of the indicator showing the best angle to gain maximum acceleration"
-seta hud_panel_strafehud_switch "1" "\"1\" = enable the switch indicator showing the angle to move to when switching sides, \"2\" = show the normal switch indicators when W-turning, \"3\" = also while side strafing"
-seta hud_panel_strafehud_switch_minspeed "-1" "minimum speed in qu/s at which switch indicator(s) which are used to aid changing strafe direction will be shown; \"-1\" = dynamic"
-seta hud_panel_strafehud_switch_color "1 1 0" "color of the switch indicator"
-seta hud_panel_strafehud_switch_alpha "1" "opacity of the switch indicator"
-seta hud_panel_strafehud_switch_width "0.003" "width of the strafe angle indicator(s) (relative to the strafe bar width)"
+seta hud_panel_strafehud_bestangle_line "0" "defines the number of dashes of the best angle indicator line; \"0\" = no line, \"1\" = solid line"
+seta hud_panel_strafehud_bestangle_line_width "0.001" "width of the best angle indicator line (relative to the panel width)"
+seta hud_panel_strafehud_bestangle_line_height "1" "height of the best angle indicator line (relative to the panel height)"
+seta hud_panel_strafehud_bestangle_arrow "1" "arrow style of the best angle indicator; \"0\" = none, \"1\" = top, \"2\" = bottom, \"3\" = both"
+seta hud_panel_strafehud_bestangle_arrow_size "0.5" "arrow size of the best angle indicator (relative to the panel height)"
+seta hud_panel_strafehud_switch "1" "\"1\" = enable the strafe angle indicator showing the angle to move to when changing side, \"2\" = show the normal switch indicators when W-turning, \"3\" = also while side strafing"
+seta hud_panel_strafehud_switch_minspeed "-1" "minimum speed in qu/s at which angle indicator(s) which are used to aid changing strafe direction will be shown; \"-1\" = dynamic"
+seta hud_panel_strafehud_switch_color "1 1 0" "color of the strafe angle indicators for changing strafe direction"
+seta hud_panel_strafehud_switch_alpha "0.5" "opacity of the strafe angle indicators for changing strafe direction"
+seta hud_panel_strafehud_switch_line "0" "defines the number of dashes of the change angle indicator line; \"0\" = no line, \"1\" = solid line"
+seta hud_panel_strafehud_switch_line_width "0.001" "width of the change angle indicator line (relative to the panel width)"
+seta hud_panel_strafehud_switch_line_height "1" "height of the change angle indicator line (relative to the panel height)"
+seta hud_panel_strafehud_switch_arrow "1" "arrow style of the change angle indicator; \"0\" = none, \"1\" = top, \"2\" = bottom, \"3\" = both"
+seta hud_panel_strafehud_switch_arrow_size "0.5" "arrow size of the change angle indicator (relative to the panel height)"
 seta hud_panel_strafehud_wturn "1" "enable W-turn indicators showing the angle to rotate your velocity as fast as possible; \"1\" = only if W-turning, \"2\" = also while strafing normally, \"3\" = also while side strafing"
-seta hud_panel_strafehud_wturn_color "0 1 1" "color of the W-turn indicators"
-seta hud_panel_strafehud_wturn_alpha "1" "opacity of the W-turn indicators"
-seta hud_panel_strafehud_wturn_width "0.003" "width of the W-turn indicators (relative to the strafe bar width)"
+seta hud_panel_strafehud_wturn_color "0 0 1" "color of the W-turn indicators"
+seta hud_panel_strafehud_wturn_alpha "0.5" "opacity of the W-turn indicators"
 seta hud_panel_strafehud_wturn_proper "0" "use the proper formula to calculate W-turn indicators (WARNING: loses accuracy at high speeds)"
 seta hud_panel_strafehud_wturn_unrestricted "0" "enable W-turn indicators even when W-turning gives acceleration (WARNING: not completely accurate)"
+seta hud_panel_strafehud_wturn_line "0" "defines the number of dashes of the W-turn angle indicator line; \"0\" = no line, \"1\" = solid line"
+seta hud_panel_strafehud_wturn_line_width "0.001" "width of the W-turn angle indicator line (relative to the panel width)"
+seta hud_panel_strafehud_wturn_line_height "1" "height of the W-turn angle indicator line (relative to the panel height)"
+seta hud_panel_strafehud_wturn_arrow "1" "arrow style of the W-turn angle indicator; \"0\" = none, \"1\" = top, \"2\" = bottom, \"3\" = both"
+seta hud_panel_strafehud_wturn_arrow_size "0.5" "arrow size of the W-turn angle indicator (relative to the panel height)"
 seta hud_panel_strafehud_direction "0" "enable direction caps to see in which direction you are currently strafing"
 seta hud_panel_strafehud_direction_color "0 0.5 1" "color of the direction caps which indicate the direction the player is currently strafing towards"
 seta hud_panel_strafehud_direction_alpha "1" "opacity of the direction caps which indicate the direction the player is currently strafing towards"
@@ -221,16 +232,38 @@ seta hud_panel_strafehud_slickdetector_height "0.125" "height of the slick detec
 seta hud_panel_strafehud_startspeed "1" "enable the start speed indicator which shows you the speed you had while passing the start trigger of a race map"
 seta hud_panel_strafehud_startspeed_fade "4" "fade time (in seconds) of the start speed text"
 seta hud_panel_strafehud_startspeed_color "1 0.75 0" "color of the start speed text"
+seta hud_panel_strafehud_startspeed_pos "0 -1" "position of the start speed text (relative to the panel), the Y coordinate must be <= -1 (below) or >= 1 (above) the panel"
 seta hud_panel_strafehud_startspeed_size "1.5" "size of the start speed text (relative to the panel height)"
 seta hud_panel_strafehud_jumpheight "0" "enable the jump height indicator which tells you how high you jumped"
 seta hud_panel_strafehud_jumpheight_fade "4" "fade time (in seconds) of the jump height text"
 seta hud_panel_strafehud_jumpheight_min "50" "minimum jump height to display in the selected unit"
 seta hud_panel_strafehud_jumpheight_color "0 1 0.75" "color of the jump height text"
+seta hud_panel_strafehud_jumpheight_pos "0 -2" "position of the jump height text (relative to the panel), the Y coordinate must be <= -1 (below) or >= 1 (above) the panel"
 seta hud_panel_strafehud_jumpheight_size "1.5" "size of the jump height text (relative to the panel height)"
 seta hud_panel_strafehud_timeout_ground "0.1" "time (in seconds) after take off before changing to air strafe physics when not jumping (visually more consistent HUD while on downwards slick ramps)"
 seta hud_panel_strafehud_timeout_turn "0.1" "time (in seconds) after releasing the strafe keys before changing mode (visually more consistent HUD while switching between left/right strafe turning)"
 seta hud_panel_strafehud_antiflicker_angle "0.01" "how many degrees from 0° to 180° the HUD ignores if it could cause visual disturbances otherwise (and to counter rounding errors)"
 seta hud_panel_strafehud_fps_update "0.5" "update interval (in seconds) of the frametime to calculate the optimal angle, smaller values may cause flickering"
+seta hud_panel_strafehud_sonar "0" "\"1\" = enable the strafe sonar"
+seta hud_panel_strafehud_sonar_audio "misc/talk" "audio to play for sonar"
+seta hud_panel_strafehud_sonar_start "0.5" "how optimal from 0 to 1 your strafing angle has to be for the strafe sonar to activate"
+seta hud_panel_strafehud_sonar_interval_start "0.333333" "strafe sonar sound interval in seconds"
+seta hud_panel_strafehud_sonar_interval_range "-0.222222" "dynamic sound interval range in seconds of the strafe sonar as you approach the optimal angle"
+seta hud_panel_strafehud_sonar_interval_exponent "1" "exponent of the dynamic sound interval range of the strafe sonar"
+seta hud_panel_strafehud_sonar_volume_start "0.333333" "sound volume of the strafe sonar"
+seta hud_panel_strafehud_sonar_volume_range "0.666666" "dynamic volume range of the strafe sonar as you approach the optimal angle"
+seta hud_panel_strafehud_sonar_volume_exponent "1" "exponent of the dynamic volume range of the strafe sonar"
+seta hud_panel_strafehud_sonar_pitch_start "0.9" "playback speed of the strafe sonar"
+seta hud_panel_strafehud_sonar_pitch_range "0.1" "dynamic playback speed range of the strafe sonar as you approach the optimal angle"
+seta hud_panel_strafehud_sonar_pitch_exponent "1" "exponent of the dynamic playback speed range of the strafe sonar"
+seta hud_panel_strafehud_vangle "0" "\"1\" = enable the vertical angle indicator"
+seta hud_panel_strafehud_vangle_color "0.75 0.75 0.75" "color of the vertical angle text"
+seta hud_panel_strafehud_vangle_pos "-0.25 1" "position of the vertical angle text (relative to the panel), the Y coordinate must be <= -1 (below) or >= 1 (above) the panel"
+seta hud_panel_strafehud_vangle_size "1" "size of the vertical angle text (relative to the panel height)"
+seta hud_panel_strafehud_strafeefficiency "0" "\"1\" = enable the strafe efficiency indicator"
+seta hud_panel_strafehud_strafeefficiency_pos "0.25 1" "position of the strafe efficiency text (relative to the panel), the Y coordinate must be <= -1 (below) or >= 1 (above) the panel"
+seta hud_panel_strafehud_strafeefficiency_size "1" "size of the strafe efficiency text (relative to the panel height)"
+seta hud_panel_strafehud_projection "0" "StrafeHUD projection mode; \"0\" = linear, \"1\" = perspective, \"2\" = panoramic"
 
 // HUD panel aliases
 alias quickmenu "cl_cmd hud quickmenu ${* ?}"
