--- a/serverbench.cfg
+++ b/serverbench.cfg
@@ -15,6 +15,7 @@ skill 100
 fraglimit_override 0
 timelimit_override 3
 sv_eventlog 1
+sv_eventlog_verbose 1
 sv_logscores_bots 1
 g_weaponarena all
 g_weaponarena_random 2
