Implement the :verbose: game log.

--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -336,6 +336,7 @@ set sv_eventlog_files_counter 0 "internal counter cvar, do not modify"
 set sv_eventlog_files_nameprefix xonotic "prefix of individual log file names"
 set sv_eventlog_files_namesuffix .log "suffix of individual log file names"
 set sv_eventlog_ipv6_delimiter 0 "use a _ delimiter for IPV6 IPs, so that they can be easily detected in scripts"
+set sv_eventlog_verbose 0 "print very spammy event log (should be used for debugging only, about 2 to 3 lines per player per frame)"
 
 set lastlevel "" "for singleplayer use, shows the menu once the match has ended"
 set quit_when_empty 0 "if \"1\", the server exits when the next level would start but is empty"
