Added new cl_hooks, menu_cmd isdemo and fixed demoseeking.cfg

--- a/demoseeking.cfg
+++ b/demoseeking.cfg
@@ -3,12 +3,11 @@
 //
 // Setup:
 //
-// Add "exec input-demoseeking.cfg" and the following cl_hook_gamestart_all
-// hook to autoexec.cfg. If you already have a cl_hook_gamestart_all hook, add
-// the quoted command to your hook, separated with a semicolon:
+// Add either of the following to your autoexec.cfg:
+//
+//     exec input-demoseeking.cfg
 //
 //     exec demoseeking.cfg
-//     alias cl_hook_gamestart_all "demoseeking_game_started"
 //
 // Usage:
 //     1. start a demo (ply/playdemo command or menu), and
@@ -44,10 +43,6 @@
 //
 // Variables:
 //
-// _demo_is_playing
-//     Indicates whether a demo is currently playing. Set to 1 when playdemo
-//     starts a demo.
-//     Note: the setup above is needed to reset this reliably.
 // _current_demo_name
 //     The name of the latest played demo. Same as the argument passed to the
 //     last playdemo command. If playdemo fails to start the demo (e.g. when
@@ -58,7 +53,8 @@
 //
 // Extras:
 //
-// - The alias playdemo_hook is run when demo playback is started.
+// - The alias playdemo_hook is run when playdemo command is called.
+//   Regardless of its success to load a demo with that name.
 // - The alias seekdemo_hook_seek_end is run after a seek completed successfully.
 // - The alias seekdemo_getseektime can be used by scripts to get the current
 //   playback time or seek target time. See its usage below.
@@ -71,13 +67,14 @@ set _demoseeking_fast_speed 80
 set _demoseeking_speed_factor 10
 
 // state initialization
-alias _demoseeking_init_vars "set _demoseeking_vars_loaded 1; set _demo_is_playing 0; set _current_demo_name \"\"; set _demoseeking_is_seeking 0; set _seekdemo_state idle; set _seekdemo_target 0; alias playdemo_hook \"\"; alias seekdemo_hook_seek_end"
+alias _demoseeking_init_vars "set _demoseeking_vars_loaded 1; set _seekdemo_demo_is_playing 0; set _current_demo_name \"\"; set _demoseeking_is_seeking 0; set _seekdemo_state idle; set _seekdemo_target 0; alias playdemo_hook \"\"; alias seekdemo_hook_seek_end"
 alias _demoseeking_init_vars1 ""
 _demoseeking_init_vars${_demoseeking_vars_loaded ?}
 
-// Hook into game start to reset seekdemo state. This prevents reloading the
-// last demo when seekdemo is accidentally called during an actual game.
-alias demoseeking_game_started "set _demo_is_playing 0; set _current_demo_name \"\""
+// Hook into "playdemo" command. This alias runs immediately after the actual
+// "playdemo" command runs. Needed for seekdemo to restart the demo when
+// seeking backwards.
+alias playdemo "set _current_demo_name \"$1\"; playdemo_hook \"$1\""
 
 // usage: seekdemo_getseektime <varname>
 // Populates <varname> with the current seek target time, if seeking. If not
@@ -87,19 +84,6 @@ alias _seekdemo_getseektime_get "cl_cmd rpn \"/$1\" ${$2} def"
 set _seekdemo_getseektime_rpn_idle time
 set _seekdemo_getseektime_rpn_starting _seekdemo_target
 set _seekdemo_getseektime_rpn_seeking _seekdemo_target
-
-// Hook into "playdemo" command. This alias runs immediately after the actual
-// "playdemo" command runs. Needed for seekdemo to restart the demo when
-// seeking backwards. Runs the playdemo_hook alias when a demo file is being
-// loaded.
-// ---
-// "cl_cmd rpn" fails while a map is loading, leaving the value of
-// _demoseeking_playdemo_success untouched, which means the playdemo command
-// succeeded.
-alias playdemo "set _demoseeking_playdemo_success 1; cl_cmd rpn /_demoseeking_playdemo_success 0 def; _demoseeking_playdemo_check \"$1\""
-alias _demoseeking_playdemo_check "_demoseeking_playdemo_check_$_demoseeking_playdemo_success \"$1\""
-alias _demoseeking_playdemo_check_0 "echo \"playdemo failed\""
-alias _demoseeking_playdemo_check_1 "set _demo_is_playing 1; set _current_demo_name \"$1\"; playdemo_hook"
 
 // Hook into the "defer" command to restore state when "defer clear" is run
 // while seeking. "defer clear" seems to be run by some csprogs.
@@ -128,13 +112,13 @@ alias _demoseeking_restore_seeking "_seekdemo_check_time"
 // check if seek should start or if target time should be adjusted instead
 alias seekdemo "_seekdemo_checkstate_$_seekdemo_state ${* q}"
 // before starting seek, verify demo is playing first
-alias _seekdemo_checkstate_idle "set _seekdemo_demo_is_playing 0; cl_cmd rpn /_seekdemo_demo_is_playing _demo_is_playing 0 != def; _seekdemo_checkstart ${* q}"
+alias _seekdemo_checkstate_idle "menu_cmd isdemo _seekdemo_demo_is_playing; _seekdemo_checkstart ${* q}"
 // when already seeking, only update the variable holding the target time
 alias _seekdemo_checkstate_starting "_seekdemo_checkstate_seeking ${* q}"
 alias _seekdemo_checkstate_seeking "rpn /_seekdemo_target _seekdemo_target \"$1\" add def"
 
 alias _seekdemo_checkstart "_seekdemo_checkstart_$_seekdemo_demo_is_playing ${* q}"
-alias _seekdemo_checkstart_0 "echo \"no demo currently playing\""
+alias _seekdemo_checkstart_0 "set _current_demo_name \"\";echo \"no demo currently playing\""
 // start new seek
 alias _seekdemo_checkstart_1 "cl_cmd rpn /_seekdemo_target time \"$1\" add def; set _demoseeking_is_seeking 1; set _seekdemo_state starting; _seekdemo_save_options; _seekdemo_start_seek"
 
