--- a/gamemodes-client.cfg
+++ b/gamemodes-client.cfg
@@ -14,34 +14,38 @@ alias asay_drop "say_team (%l) dropped %w ; impulse 17"
 seta cl_matchcount 0 // incremented by cl_hook_gameend and used by playerstats to know when to
 alias _cl_hook_gamestart "set _cl_hook_gametype $1; _cl_hook_gamestart_stage2"
 alias _cl_hook_gamestart_stage2 "cl_hook_gamestart_all; cl_hook_gamestart_${_cl_hook_gametype}"
-alias cl_hook_gamestart_all
-alias cl_hook_gamestart_nop  //is only called when CSQC unloads before knowing the gametype, very unlikely
-alias cl_hook_gamestart_dm
-alias cl_hook_gamestart_tdm
-alias cl_hook_gamestart_dom
-alias cl_hook_gamestart_ctf
-alias cl_hook_gamestart_lms
-alias cl_hook_gamestart_ca
-alias cl_hook_gamestart_kh
-alias cl_hook_gamestart_ons
-alias cl_hook_gamestart_as
-alias cl_hook_gamestart_rc
-alias cl_hook_gamestart_nb
-alias cl_hook_gamestart_cts
-alias cl_hook_gamestart_ka
-alias cl_hook_gamestart_ft
-alias cl_hook_gamestart_inv
-alias cl_hook_gamestart_duel
-alias cl_hook_gamestart_mayhem
-alias cl_hook_gamestart_tmayhem
-alias cl_hook_gamestart_tka
-alias cl_hook_gamestart_surv
-alias cl_hook_gameend
-alias cl_hook_shutdown
-alias cl_hook_activeweapon
-// called on client personal best set
-// $1 new pb time,
-// $2 old pb time,
-// $3 how much time the pb improved by
-// $4 new rank# on the leaderboard
-alias cl_hook_race_pb
+alias cl_hook_gamestart_all "" "// this alias is called after loading into a match"
+alias cl_hook_gamestart_nop "" "// this alias is only called when CSQC unloads before knowing the gametype, very unlikely"
+alias cl_hook_gamestart_dm "" "// this alias is called after loading into deathmatch"
+alias cl_hook_gamestart_tdm "" "// this alias is called after loading into team deathmatch"
+alias cl_hook_gamestart_dom "" "// this alias is called after loading into domination"
+alias cl_hook_gamestart_ctf "" "// this alias is called after loading into capture the flag"
+alias cl_hook_gamestart_lms "" "// this alias is called after loading into last man standing"
+alias cl_hook_gamestart_ca "" "// this alias is called after loading into clan arena"
+alias cl_hook_gamestart_kh "" "// this alias is called after loading into keyhunt"
+alias cl_hook_gamestart_ons "" "// this alias is called after loading into onslaught"
+alias cl_hook_gamestart_as "" "// this alias is called after loading into assault"
+alias cl_hook_gamestart_rc "" "// this alias is called after loading into race"
+alias cl_hook_gamestart_nb "" "// this alias is called after loading into nexball"
+alias cl_hook_gamestart_cts "" "// this alias is called after loading into complete the stage"
+alias cl_hook_gamestart_ka "" "// this alias is called after loading into keepaway"
+alias cl_hook_gamestart_ft "" "// this alias is called after loading into freezetag"
+alias cl_hook_gamestart_inv "" "// this alias is called after loading into invasion"
+alias cl_hook_gamestart_duel "" "// this alias is called after loading into duel"
+alias cl_hook_gamestart_mayhem "" "// this alias is called after loading into mayhem"
+alias cl_hook_gamestart_tmayhem "" "// this alias is called after loading into team mayhem"
+alias cl_hook_gamestart_tka "" "// this alias is called after loading into team keepaway"
+alias cl_hook_gamestart_surv "" "// this alias is called after loading into survival"
+
+alias cl_hook_gameintermission "" "// this alias is called when intermission starts in a match"
+alias cl_hook_gameend "" "// this alias is called when intermission starts in a match or client quits from a match before intermission"
+
+alias cl_hook_shutdown "" "// this alias is called when the CSQC unloads"
+
+alias cl_hook_demostart "" "// this alias is called when a demo replay starts"
+alias cl_hook_demointermission "" "// this alias is called when intermission starts in a demo replay"
+alias cl_hook_demoend "" "// this alias is called when a demo replay ends"
+
+alias cl_hook_activeweapon "" "// this alias is called when switching weapons, with the new weapon's name as the first argument ( $1 )"
+
+alias cl_hook_race_pb "" "// called on client personal best set, $1 new pb time, $2 old pb time, $3 how much time the pb improved by, $4 new rank# on the leaderboard"
