--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -937,11 +937,13 @@ set cl_simpleitems_postfix "_luma" "posfix to add fo model name when simple item
 set cl_weapon_stay_color "2 0.5 0.5" "color of picked up weapons when g_weapon_stay > 0 (FORMAT: \"0 0 0\" leaves the color unchanged, negative values allowed)"
 set cl_weapon_stay_alpha 0.75 "alpha of picked up weapons when g_weapon_stay > 0"
 
+seta cl_tracers_teamcolor 0 "apply team and player colors to weapon beam attacks, besides Vaporizer beams which use cl_vaporizerbeam_teamcolor; \"1\" = team games only, \"2\" = always (player colors will be used outside of team games)"
+
 seta cl_arcbeam_simple 1 "use a simplified beam for the Arc instead of accurate flexible poly drawing (improves performance and visuals slightly)"
-seta cl_arcbeam_teamcolor 1 "color the Arc beam based on the player's colors"
 
 seta cl_grapplehook_alpha 1 "opacity of the Grappling Hook chain"
 
+seta cl_vaporizerbeam_teamcolor 1 "apply team and player colors to the Vaporizer beam"
 seta cl_vaporizerbeam_particle 0 "use a legacy particle effect for the Vaporizer beam instead of a rendered poly, may not reflect accurate colors"
 seta cl_vaporizerbeam_lifetime 0.8 "time it takes for the Vaporizer beam to fade completely"
 seta cl_vaporizerbeam_colorboost 0.7 "saturation of the Vaporizer beam's color based on the player color"
