Don't create useless client-side weapon autocvars; move a few tuba cvars from server to client config because they are client settings

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -335,6 +335,12 @@ r_glsl_offsetmapping_scale 0.02
 scr_screenshot_jpeg 1
 scr_screenshot_jpeg_quality 0.9
 
+
+seta cl_tuba_attenuation 0.5
+seta cl_tuba_fadetime 0.25
+seta cl_tuba_pitchstep 6
+seta cl_tuba_volume 1
+
 cl_sound_wizardhit ""
 cl_sound_hknighthit ""
 cl_sound_tink1 weapons/tink1.wav
