Add a cvar to allow coloring the physics HUD speed text
Uses the same colours as the acceleration bar, hence showing blue when accelerating, orange when decelerating, and white when neutral (by default).

--- a/_hud_descriptions.cfg
+++ b/_hud_descriptions.cfg
@@ -259,6 +259,7 @@ seta hud_panel_physics_text_scale "" "scale text height by this factor"
 seta hud_panel_physics_speed_unit_show "" "also show speed unit (NOTE: overridden if both topspeed and jumpspeed text are shown)"
 seta hud_panel_physics_speed_max "" "speed progress bar gets filled up completely by this value (in qu/s)"
 seta hud_panel_physics_speed_vertical "" "include the speed on the Z-axis"
+seta hud_panel_physics_speed_colored "" "draw the speed text as the same color as your current acceleration (hud_progressbar_acceleration_color when accelerating, hud_progressbar_acceleration_neg_color when decelerating)"
 seta hud_panel_physics_topspeed "" "also show top speed"
 seta hud_panel_physics_topspeed_time "" "how many seconds the topspeed text takes to fade out"
 
