--- a/hud_luma.cfg
+++ b/hud_luma.cfg
@@ -250,6 +250,7 @@ seta hud_panel_physics_bg_padding ""
 seta hud_panel_physics_speed_unit_show "1"
 seta hud_panel_physics_speed_max "1800"
 seta hud_panel_physics_speed_vertical "0"
+seta hud_panel_physics_speed_colored "0"
 seta hud_panel_physics_topspeed "1"
 seta hud_panel_physics_topspeed_time "4"
 seta hud_panel_physics_acceleration_max "1.5"
