Make monster item drops customizable

--- a/monsters.cfg
+++ b/monsters.cfg
@@ -7,6 +7,7 @@ set g_monster_zombie_attack_melee_damage 55
 set g_monster_zombie_attack_melee_delay 1
 set g_monster_zombie_damageforcescale 0.55
 set g_monster_zombie_health 200
+set g_monster_zombie_loot "health_medium"
 set g_monster_zombie_speed_run 600
 set g_monster_zombie_speed_stop 100
 set g_monster_zombie_speed_walk 300
@@ -21,6 +22,7 @@ set g_monster_spider_attack_web_speed 1300
 set g_monster_spider_attack_web_speed_up 150
 set g_monster_spider_damageforcescale 0.6
 set g_monster_spider_health 180
+set g_monster_spider_loot "health_medium"
 set g_monster_spider_speed_run 500
 set g_monster_spider_speed_stop 100
 set g_monster_spider_speed_walk 400
@@ -53,6 +55,7 @@ set g_monster_mage_heal_delay 1.5
 set g_monster_mage_heal_minhealth 250
 set g_monster_mage_heal_range 250
 set g_monster_mage_health 400
+set g_monster_mage_loot "health_big"
 set g_monster_mage_shield_blockpercent 0.8
 set g_monster_mage_shield_delay 7
 set g_monster_mage_shield_time 3
@@ -69,6 +72,7 @@ set g_monster_wyvern_attack_fireball_radius 120
 set g_monster_wyvern_attack_fireball_speed 1200
 set g_monster_wyvern_damageforcescale 0.6
 set g_monster_wyvern_health 150
+set g_monster_wyvern_loot "cells"
 set g_monster_wyvern_speed_run 250
 set g_monster_wyvern_speed_stop 300
 set g_monster_wyvern_speed_walk 120
@@ -87,6 +91,7 @@ set g_monster_golem_attack_smash_force 100
 set g_monster_golem_attack_smash_range 200
 set g_monster_golem_damageforcescale 0.1
 set g_monster_golem_health 650
+set g_monster_golem_loot "health_mega electro"
 set g_monster_golem_speed_run 320
 set g_monster_golem_speed_stop 300
 set g_monster_golem_speed_walk 150
@@ -98,6 +103,7 @@ set g_monsters_edit 0
 set g_monsters_skill 1 "monster skill (affecting some of their attributes); \"1\" = easy, \"2\" = medium, \"3\" = hard, \"4\" = insane, \"5\" = nightmare"
 set g_monsters_miniboss_chance 5
 set g_monsters_miniboss_healthboost 100
+set g_monsters_miniboss_loot "vortex" "additional items added to the loot pool when a miniboss dies"
 set g_monsters_drop 1
 set g_monsters_drop_time 10
 set g_monsters_ignoretraces 1
