--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -492,7 +492,7 @@ seta menu_sounds 0 "enables menu sound effects; \"1\" = enable click sounds, \"2
 seta menu_tooltips 1 "menu tooltips; \"0\" = disabled, \"1\" = enabled, \"2\" = also show cvar or console command (when available) changed or executed by the item"
 set menu_picmip_bypass 0 "bypass texture quality enforcement based on system resources (WARNING: not recommended and may cause crashes!)"
 set menu_showboxes 0 "show item bounding boxes (NOTE: for debugging)"
-set menu_cvarlist_onlymodified 0 "show only modified cvars in the cvar list"
+set menu_cvarlist_onlymodified 1 "show only modified cvars in the advanced cvar list"
 seta menu_create_show_all 0 "show most gametypes in the create menu"
 
 set menu_no_music_nor_welcome 0 "don't play the menu music and skip the welcome announcer"
