Reword g_monsters_miniboss_loot to mention the list supports multiple entries

--- a/monsters.cfg
+++ b/monsters.cfg
@@ -103,7 +103,7 @@ set g_monsters_edit 0
 set g_monsters_skill 1 "monster skill (affecting some of their attributes); \"1\" = easy, \"2\" = medium, \"3\" = hard, \"4\" = insane, \"5\" = nightmare"
 set g_monsters_miniboss_chance 5
 set g_monsters_miniboss_healthboost 100
-set g_monsters_miniboss_loot "vortex" "additional items added to the loot pool when a miniboss dies"
+set g_monsters_miniboss_loot "vortex" "space-separated list of items added as a potential drop when a miniboss dies"
 set g_monsters_drop 1
 set g_monsters_drop_time 10
 set g_monsters_ignoretraces 1
