--- a/_hud_common.cfg
+++ b/_hud_common.cfg
@@ -106,8 +106,12 @@ seta hud_panel_engineinfo_framecounter_exponentialmovingaverage_instantupdate_ch
 seta hud_panel_engineinfo_framecounter_decimals "0" "amount of decimals to show"
 seta hud_panel_engineinfo_framecounter_time "0.1" "time between framerate display updates"
 
-seta hud_panel_physics_acceleration_movingaverage 1 "use an averaging method for calculating acceleration instead of the real value"
-seta hud_panel_physics_update_interval 0.016 "how often (in seconds) numeric values get updated on screen"
+seta hud_panel_physics_acceleration_movingaverage "1" "use an averaging method for calculating acceleration instead of the real value. lower (positive) values update the acceleration quicker"
+seta hud_panel_physics_acceleration_max_slick "-1" "acceleration progressbar gets completely filled up by this value (in g) while on slick; \"-1\" = same as the normal max"
+seta hud_panel_physics_update_interval "0.015625" "how often (in seconds) numeric values get updated on screen"
+seta hud_panel_physics_jumpspeed "0" "also show jump speed, replacing the speed unit text (NOTE: ignores vertical speed)"
+seta hud_panel_physics_jumpspeed_time "1" "how many seconds the jumpspeed text takes to fade out"
+seta hud_panel_physics_force_layout "0" "\"1\" = force speed and acceleration to be side-by-side, \"2\" = force them to be above one another"
 
 seta hud_panel_itemstime_progressbar_maxtime "30" "when left time is at least this amount, the status bar is full"
 seta hud_panel_itemstime_hidespawned "1" "\"1\" = hide an item from the panel when all the occurrences of it are available again, \"2\" = hide it when at least one occurrence is available again"
