--- a/_hud_descriptions.cfg
+++ b/_hud_descriptions.cfg
@@ -252,15 +252,16 @@ seta hud_panel_physics_progressbar "" "enable progress bar in panel; \"2\" = onl
 seta hud_panel_physics_acceleration_max "" "acceleration progress bar gets completely filled up by this value (in g)"
 seta hud_panel_physics_acceleration_progressbar_mode "" "\"0\" = progress bar increases from the center to the right if the acceleration is positive, to the left if it's negative, \"1\" = progress bar increases from the border in the same direction for both positive and negative accelerations"
 seta hud_panel_physics_acceleration_progressbar_scale "" "multiply acceleration progress bar values by this factor (allow progress bar to go out of panel bounds)"
-seta hud_panel_physics_acceleration_progressbar_nonlinear "" "use a non linear function to display acceleration progress bar values (amplify more smaller values)"
+seta hud_panel_physics_acceleration_progressbar_nonlinear "" "use a nonlinear function to display acceleration progress bar values (amplifies smaller values)"
 seta hud_panel_physics_acceleration_vertical "" "include the acceleration on the Z-axis"
 seta hud_panel_physics_text "" "show text in panel; \"2\" = only for speed, \"3\" = only for acceleration"
 seta hud_panel_physics_text_scale "" "scale text height by this factor"
-seta hud_panel_physics_speed_unit_show "" "also show speed unit"
+seta hud_panel_physics_speed_unit_show "" "also show speed unit (NOTE: overridden if both topspeed and jumpspeed text are shown)"
 seta hud_panel_physics_speed_max "" "speed progress bar gets filled up completely by this value (in qu/s)"
 seta hud_panel_physics_speed_vertical "" "include the speed on the Z-axis"
+seta hud_panel_physics_speed_colored "" "draw the speed text as the same color as your current acceleration (hud_progressbar_acceleration_color when accelerating, hud_progressbar_acceleration_neg_color when decelerating)"
 seta hud_panel_physics_topspeed "" "also show top speed"
-seta hud_panel_physics_topspeed_time "" "how many seconds the top speed takes to fade out"
+seta hud_panel_physics_topspeed_time "" "how many seconds the topspeed text takes to fade out"
 
 seta hud_panel_centerprint_pos "" "position of this base of the panel"
 seta hud_panel_centerprint_size "" "size of this panel"
