Fix #2978 "Tuba no longer works in the built-in demo little-bot-orchestra.dem"

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -341,6 +341,13 @@ seta cl_tuba_fadetime 0.25
 seta cl_tuba_pitchstep 6
 seta cl_tuba_volume 1
 
+// legacy client cvars that were improperly used as client cvars
+// NOTE: g_balance_tuba_attenuation was used both as client and server cvar, and still is a server cvar
+seta g_balance_tuba_attenuation 0.5
+seta g_balance_tuba_fadetime 0.25
+seta g_balance_tuba_pitchstep 6
+seta g_balance_tuba_volume 1
+
 cl_sound_wizardhit ""
 cl_sound_hknighthit ""
 cl_sound_tink1 weapons/tink1.wav
