Add cvar font_cjk_enable and relative menu checkbox, useful to load additional fonts for CJK languages

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -536,6 +536,10 @@ r_font_size_snapping 4
 r_font_postprocess_blur 1
 r_font_postprocess_outline 1
 
+// improve support for Chinese / Japanese / Korean glyphs
+set font_cjk_enable 0 "load additional fonts for CJK languages"
+set font_cjk_variant jp "CJK font variant (automatically set by the menu on language switch)"
+
 // good settings for these fonts
 con_chat 5
 con_chatpos -9
