--- a/gamemodes-server.cfg
+++ b/gamemodes-server.cfg
@@ -434,8 +434,7 @@ set g_freezetag_weaponarena "most_available" "starting weapons. takes the same o
 set g_keepaway 0 "Keepaway: game mode which focuses around a ball" // script-ignore
 set g_keepaway_score_bckill 1 "points for killing the ball carrier (Ball Carrier Kill)"
 set g_keepaway_score_killac 1 "points for kills while holding the ball (Kill As Carrier)"
-set g_keepaway_score_timeinterval 1 "amount of time it takes between intervals for timepoints to be added to the score"
-set g_keepaway_score_timepoints 0 "points to add to score per timeinterval; \"0\" = no points"
+set g_keepaway_score_timepoints 0 "points to add to ball carrier's score per second"
 set g_keepaway_ballcarrier_effects 8 "add together the numbers you want; EF_ADDITIVE (32) / EF_NODEPTHTEST (8192) / EF_DIMLIGHT (8)"
 set g_keepaway_ballcarrier_highspeed 1 "speed multiplier done to the person holding the ball (recommended when used with some mutators)"
 set g_keepaway_ballcarrier_damage	1	"damage multiplier while holding the ball"
@@ -674,8 +673,7 @@ set g_tka_point_leadlimit -1 "TKA point lead limit overriding the mapinfo specif
 set g_tka_score_team 1 "allow points to be awarded to teammates for any kill when the ball is in your team's possession"
 set g_tka_score_bckill 1 "points for killing the ball carrier (Ball Carrier Kill)"
 set g_tka_score_killac 1 "points for kills while holding the ball (Kill As Carrier)"
-set g_tka_score_timeinterval 1 "amount of time it takes between intervals for timepoints to be added to the score"
-set g_tka_score_timepoints 0 "points to add to score per timeinterval; \"0\" = no points"
+set g_tka_score_timepoints 0 "points to add to ball carrier's team's score per second"
 set g_tka_ballcarrier_effects 8 "add together the numbers you want; EF_ADDITIVE (32) / EF_NODEPTHTEST (8192) / EF_DIMLIGHT (8)"
 set g_tka_ballcarrier_highspeed 1 "speed multiplier done to the person holding the ball (recommended when used with some mutators)"
 set g_tka_ballcarrier_damage	1	"damage multiplier while holding the ball"
