--- a/mutators.cfg
+++ b/mutators.cfg
@@ -66,6 +66,10 @@ set g_overkill_filter_armorbig 1
 set g_overkill_filter_armormega 0
 set g_overkill_blaster_keepdamage 0 "allow secondary fire to hurt players"
 set g_overkill_blaster_keepforce 0 "allow secondary fire to push players"
+set g_overkill_loot_player "armor_small" "on player death a random loot item from this space-separated list is dropped, \"random\" drops any allowed normal item, \"\" disables loot items"
+set g_overkill_loot_player_time 5 "lifetime of loot items, <= 0 disables loot items"
+set g_overkill_loot_monster "armor_small" "on monster death a random loot item from this space-separated list is dropped, \"random\" drops any allowed normal item, \"\" disables loot items"
+set g_overkill_loot_monster_time 5 "lifetime of loot items, <= 0 disables loot items"
 
 
 // =========
