Add some documentation to default balance config files
Explained how non-default ones work in conjunction with the default balance files.
Provided some examples to make it easier to understand.
Updated the dumpweapons command so it adds the documentation comments to the top of the file.

--- a/bal-wep-xonotic.cfg
+++ b/bal-wep-xonotic.cfg
@@ -1,3 +1,27 @@
+// ************************************************************************************ //
+// **                 WARNING - MANUALLY EDIT THIS FILE WITH CAUTION                 ** //
+// **                                                                                ** //
+// **  This file can be automatically generated with the command 'dumpweapons'.      ** //
+// **  This is useful to create custom weapon balance configs, after changing some   ** //
+// **  weapon balance cvars in-game.                                                 ** //
+// **  If you are creating a custom weapon balance config file, delete this.         ** //
+// **                                                                                ** //
+// **  If you are just editing the default weapon balance (bal-wep-xonotic.cfg),     ** //
+// **  please keep this comment as it contains helpful documentation.                ** //
+// **                                                                                ** //
+// **  These are the default weapon-related balance config settings, categorized by  ** //
+// **  weapon.                                                                       ** //
+// **  Other default settings are in balance-xonotic.cfg, which executes this file.  ** //
+// **  Other wep balance configs like bal-wep-nexuiz25.cfg first execute this, then  ** //
+// **  override some settings.                                                       ** //
+// **  Therefore any changes made to the default balance here will affect all        ** //
+// **  bal-wep-*.cfg files, unless you override it in such files.                    ** //
+// **                                                                                ** //
+// **  If you add a new weapon cvar, remove a weapon cvar, or rename a weapon cvar,  ** //
+// **  please regenerate this file with that command, or manually add it here.       ** //
+// **                                                                                ** //
+// ************************************************************************************ //
+
 // {{{ #1: Blaster
 set g_balance_blaster_primary_animtime 0.2
 set g_balance_blaster_primary_damage 20
