--- a/balance-xonotic.cfg
+++ b/balance-xonotic.cfg
@@ -1,3 +1,21 @@
+// ******************************************************************************************** //
+// **                     WARNING - MANUALLY EDIT THIS FILE WITH CAUTION                     ** //
+// **                                                                                        ** //
+// **  These are the default balance config settings, excluding weapon-related settings,     ** //
+// **  which are instead in bal-wep-xonotic.cfg.                                             ** //
+// **  Therefore any edits to this file will affect default gameplay.                        ** //
+// **                                                                                        ** //
+// **  Other balance configs like balance-overkill.cfg first execute this, then override     ** //
+// **  some settings.                                                                        ** //
+// **  Therefore any changes made to the default balance here will affect all balance-*.cfg  ** //
+// **  files, unless you override it in such files.                                          ** //
+// **  Generally balance config files execute their wep balance config file, if one exists.  ** //
+// **  The name of the current balance set is stored in g_mod_balance, which is read by      ** //
+// **  some parts of the code, e.g. the Overkill mutator can only be enabled if              ** //
+// **  g_mod_balance is Overkill.                                                            ** //
+// **                                                                                        ** //
+// ******************************************************************************************** //
+
 g_mod_balance Xonotic
 testing_disable
 
