Mutators menu: Add radio buttons for g_new_toys_autoreplace.
Also improve g_new_toys checkbox tooltip and g_new_toys* cvar descriptions.

--- a/mutators.cfg
+++ b/mutators.cfg
@@ -324,8 +324,8 @@ set g_campcheck_typecheck 0 "damage campers who are typing"
 // ==========
 //  new toys
 // ==========
-set g_new_toys 1 "Mutator 'New Toys': enable extra fun guns" // script-ignore
-set g_new_toys_autoreplace 0 "\"0\" = never replace, \"1\" = always auto replace guns by available new toys, \"2\" = randomly auto replace guns by available new toys"
+set g_new_toys 1 "allow maps to spawn additional weapons (new toys)"
+set g_new_toys_autoreplace 0 "\"0\" = never replace, \"1\" = automatically replace some weapons of the map with their corresponding additional weapons, \"2\" = like 1 but randomly spawn normal weapons or their corresponding additional weapons"
 set g_new_toys_use_pickupsound 0 "play the 'new toys, new toys!' roflsound when picking up a new toys weapon"
 
 
