Improve when waypoints are shown in ka/tka/kh/ctf
Hid the waypoint from enemies when the player is "invisible."
Defined IS_INVISIBLE as alpha <= 0.25, has Invisibility powerup, or Cloaked mutator enabled, in qcsrc/server/utils.qh.
Showed waypoints in warmup in ka/tka/kh, and to spectators (unless they're spectating a key/ball carrier, so the waypoint isn't constantly shown at the top of the screen).
Allowed g_balance_keyhunt_delay_tracking to be negative, so that the tracking waypoints never appear.
Added cvars g_keepawayball_tracking and g_tkaball_tracking to customize when waypoints show in ka/tka.
- 0 means they never show.
- 1 means they always show.
- 2 means they show only on the dropped ball.

--- a/gamemodes-server.cfg
+++ b/gamemodes-server.cfg
@@ -451,6 +451,7 @@ set g_keepawayball_effects 8 "add together the numbers you want; EF_ADDITIVE (32
 set g_keepawayball_trail_color	254	"particle trail color from player/ball"
 set g_keepawayball_damageforcescale	2 "scale of force which is applied to the ball by weapons/explosions/etc"
 set g_keepawayball_respawntime	10	"if no one picks up the ball, how long to wait until the ball respawns"
+set g_keepawayball_tracking	1	"\"0\" = don't show a waypoint on the ball/ballcarrier, \"1\" = always show a waypoint, \"2\" = only show a waypoint if the ball is dropped"
 
 
 // ==========
@@ -461,7 +462,7 @@ set g_balance_keyhunt_return_when_unreachable 1 "automatically destroy a key if 
 set g_balance_keyhunt_delay_damage_return 5 "time a key takes to automatically destroy itself if it falls into lava/slime/trigger hurt"
 set g_balance_keyhunt_delay_return 60 "time a key takes to destroy itself if dropped"
 set g_balance_keyhunt_delay_round 5
-set g_balance_keyhunt_delay_tracking 10
+set g_balance_keyhunt_delay_tracking 10 "time after which waypoints show on keys and key carriers, if negative they don't show"
 set g_balance_keyhunt_delay_fadeout 2
 set g_balance_keyhunt_delay_collect 1.5
 set g_balance_keyhunt_maxdist 150
@@ -690,6 +691,7 @@ set g_tkaball_effects 8 "add together the numbers you want; EF_ADDITIVE (32) / E
 set g_tkaball_trail_color	254	"particle trail color from player/ball"
 set g_tkaball_damageforcescale	2 "scale of force which is applied to the ball by weapons/explosions/etc"
 set g_tkaball_respawntime	10	"if no one picks up the ball, how long to wait until the ball respawns"
+set g_tkaball_tracking	1	"\"0\" = don't show a waypoint on the ball/ballcarrier, \"1\" = always show a waypoint, \"2\" = only show a waypoint if the ball is dropped"
 
 // ==========
 //  survival
