Allow all non?carrier -> non?carrier/self ka/tka dmg/force combos
Implemented this similar to as described here https://gitlab.com/xonotic/xonotic-data.pk3dir/-/merge_requests/1431#note_2317419396, using a damage vector and force vector.
Currently the carrier -> carrier isn't very useful in ka/tka since there's only one ball, but this approach is consistent, and more balls may be allowed in future.
Consequently fixed up the comments.

--- a/gamemodes-server.cfg
+++ b/gamemodes-server.cfg
@@ -437,15 +437,11 @@ set g_keepaway_score_killac 1 "points for kills while holding the ball (Kill As 
 set g_keepaway_score_timepoints 0 "points to add to ball carrier's score per second"
 set g_keepaway_ballcarrier_maxballs 1 "how many balls a single player may carry at once"
 set g_keepaway_ballcarrier_highspeed 1 "speed multiplier done to the person holding the ball (recommended when used with some mutators)"
-set g_keepaway_ballcarrier_damage	1	"damage multiplier while holding the ball"
-set g_keepaway_ballcarrier_force	1	"force multiplier while holding the ball"
-set g_keepaway_ballcarrier_selfdamage	1	"self damage multiplier while holding the ball"
-set g_keepaway_ballcarrier_selfforce	1	"self force multiplier while holding the ball"
+set g_keepaway_ballcarrier_damage	"1 1 1"	"damage multiplier of ball carriers; to themselves (X), to other carriers (Y), to noncarriers (Z)"
+set g_keepaway_ballcarrier_force	"1 1 1"	"force multiplier of ball carriers; to themselves (X), to other carriers (Y), to noncarriers (Z)"
+set g_keepaway_noncarrier_damage	"1 1 1"	"damage multiplier of players who don't have the ball; to themselves (X), to carriers (Y), to other noncarriers (Z)"
+set g_keepaway_noncarrier_force	"1 1 1"	"force multiplier of players who don't have the ball; to themselves (X), to carriers (Y), to other noncarriers (Z)"
 set g_keepaway_noncarrier_warn	1	"warn players when they kill without holding the ball"
-set g_keepaway_noncarrier_damage	1	"damage done to other players if both you and they don't have the ball"
-set g_keepaway_noncarrier_force	1	"force done to other players if both you and they don't have the ball"
-set g_keepaway_noncarrier_selfdamage	1	"self damage if you don't have the ball"
-set g_keepaway_noncarrier_selfforce	1	"self force if you don't have the ball"
 set g_keepawayball_count 1 "how many balls to spawn"
 set g_keepawayball_effects 8 "add together the numbers you want; EF_ADDITIVE (32) / EF_NODEPTHTEST (8192) / EF_DIMLIGHT (8)"
 set g_keepawayball_trail_color	254	"particle trail color from player/ball"
@@ -677,15 +673,11 @@ set g_tka_score_killac 1 "points for kills while holding the ball (Kill As Carri
 set g_tka_score_timepoints 0 "points to add to ball carrier's team's score per second"
 set g_tka_ballcarrier_maxballs 1 "how many balls a single player may carry at once"
 set g_tka_ballcarrier_highspeed 1 "speed multiplier done to the person holding the ball (recommended when used with some mutators)"
-set g_tka_ballcarrier_damage	1	"damage multiplier while holding the ball"
-set g_tka_ballcarrier_force	1	"force multiplier while holding the ball"
-set g_tka_ballcarrier_selfdamage	1	"self damage multiplier while holding the ball"
-set g_tka_ballcarrier_selfforce	1	"self force multiplier while holding the ball"
+set g_tka_ballcarrier_damage	"1 1 1" "damage multiplier of ball carriers; to themselves (X), to other carriers (Y), to noncarriers (Z)"
+set g_tka_ballcarrier_force	"1 1 1"	"force multiplier of ball carriers; to themselves (X), to other carriers (Y), to noncarriers (Z)"
+set g_tka_noncarrier_damage	"1 1 1"	"damage multiplier of players who don't have the ball; to themselves (X), to carriers (Y), to other noncarriers (Z)"
+set g_tka_noncarrier_force	"1 1 1"	"force multiplier of players who don't have the ball; to themselves (X), to carriers (Y), to other noncarriers (Z)"
 set g_tka_noncarrier_warn	1	"warn players when they kill without holding the ball"
-set g_tka_noncarrier_damage	1	"damage done to other players if both you and they don't have the ball"
-set g_tka_noncarrier_force	1	"force done to other players if both you and they don't have the ball"
-set g_tka_noncarrier_selfdamage	1	"self damage if you don't have the ball"
-set g_tka_noncarrier_selfforce	1	"self force if you don't have the ball"
 set g_tkaball_count 1 "how many balls to spawn"
 set g_tkaball_effects 8 "add together the numbers you want; EF_ADDITIVE (32) / EF_NODEPTHTEST (8192) / EF_DIMLIGHT (8)"
 set g_tkaball_trail_color	254	"particle trail color from player/ball"
