Add damage/force multipliers to keyhunt
Implemented the same way as for ka/tka.
Multipliers are 1 by default.

--- a/gamemodes-server.cfg
+++ b/gamemodes-server.cfg
@@ -468,6 +468,10 @@ set g_balance_keyhunt_score_capture 100
 set g_balance_keyhunt_score_push 60
 set g_balance_keyhunt_score_destroyed 50
 set g_balance_keyhunt_score_destroyed_ownfactor 1
+set g_balance_keyhunt_carrier_damage	"1 1 1"	"damage multiplier of key carriers; to themselves (X), to other carriers (Y), to noncarriers (Z)"
+set g_balance_keyhunt_carrier_force	"1 1 1"	"force multiplier of key carriers; to themselves (X), to other carriers (Y), to noncarriers (Z)"
+set g_balance_keyhunt_noncarrier_damage	"1 1 1"	"damage multiplier of players who don't have a key; to themselves (X), to carriers (Y), to other noncarriers (Z)"
+set g_balance_keyhunt_noncarrier_force	"1 1 1"	"force multiplier of players who don't have a key; to themselves (X), to carriers (Y), to other noncarriers (Z)"
 set g_balance_keyhunt_dropvelocity 300
 set g_balance_keyhunt_throwvelocity 400
 set g_balance_keyhunt_protecttime 0.8
