Move the fuel bar from the the HealthArmor panel to the Ammo panel
Normally fuel is not displayed, it's displayed if player has some fuel or unlimited ammo or jetpack or off-hand hook.

The change to GetAmmoStat allowed to handle the returned value in a consistent way (fuel should have called getstatf instead of getstati on the returned value)

--- a/_hud_common.cfg
+++ b/_hud_common.cfg
@@ -84,6 +84,7 @@ seta hud_panel_weapons_hide_ondeath 0 "hide this panel when dead"
 seta hud_panel_weapons_orderbyimpulse "1" "list weapons in their impulse order instead of priority"
 
 seta hud_panel_ammo_maxammo "40" "when you have this much ammo, the ammo status bar is full"
+seta hud_panel_ammo_maxfuel "100" "when you have this much fuel, the fuel status bar is full"
 seta hud_panel_ammo_hide_ondeath 0 "hide this panel when dead"
 
 seta hud_panel_powerups_hide_ondeath 0 "hide this panel when dead"
