Show a warning on map start when the server has been updated without a full restart

--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -14,6 +14,8 @@ set sv_mapchange_delay 5 "delay by this many seconds after the match ends before
 set minplayers 0 "fill server with bots to reach this number of players in teamless games (if bot_number is not enough)"
 set minplayers_per_team 0 "fill server with bots to reach this number of players per team (if bot_number is not enough)"
 
+set sv_watermark_start ""
+
 // executed when the first player joins or the last player leaves
 alias sv_hook_firstjoin
 alias sv_hook_lastleave
